fix top toolbar overlap with logo on mobile

--- a/geoportailv3/static/less/navbars.less
+++ b/geoportailv3/static/less/navbars.less
@@ -162,6 +162,9 @@ header {
   > .brand {
     height: 40px;
   }
+  .brand {
+    margin-right: -200px;
+  }
 }
 
 /***********/
